--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,16 @@
+<h1>Create a Team and Heroes!</h1>
 
+<form action="/" method="post">
+  <input type="text" name="team[name]">
+  <input type="text" name="team[motto]">
+  <input type="text" id="member1_name" name="team[heroes][][name]">
+  <input type="text" id="member1_power" name="team[heroes][][power]">
+  <input type="text" id="member1_bio" name="team[heroes][][biography]">
+  <input type="text" id="member2_name" name="team[heroes][][name]">
+  <input type="text" id="member2_power" name="team[heroes][][power]">
+  <input type="text" id="member2_bio" name="team[heroes][][biography]">
+  <input type="text" id="member3_name" name="team[heroes][][name]">
+  <input type="text" id="member3_power" name="team[heroes][][power]">
+  <input type="text" id="member3_bio" name="team[heroes][][biography]">
+  <input type="submit" value="submit">
+</form>
