--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,9 @@
+<%= @team.name %>
+Team Motto: <%= @team.motto %>
 
-
+<% @heroes.each do |hero| %>
+  Hero Name: <%= hero.name %>
+  Hero Power: <%= hero.power %>
+  Hero Biography: <%= hero.biography %>
+<% end %>
 
