--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,58 @@
 
+<h1>Create a Team and Heroes!</h1>
+
+<form action="/teams" method="post">
+  <label for="team[name]">Team Name</label>
+  <input type="text" name="team[name]"> <br />
+
+  <label for="team[motto]">Team Motto</label>
+  <input type="text" name="team[motto]"> <br />
+
+  <h2>Hero 1</h2>
+  <label for="team[members][][name]">Hero's Name</label>
+  <input type="text" name="team[members][][name]" id="member1_name"> <br />
+
+  <label for="team[members][][power]">Hero's Power</label>
+  <input type="text" name="team[members][][power]" id="member1_power"> <br />
+
+  <label for="team[members][][bio]">Hero's Biography</label>
+  <input type="text" name="team[members][][bio]" id="member1_bio"> <br />
+
+
+  <h2>Hero 2</h2>
+  <label for="team[members][][name]">Hero's Name</label>
+  <input type="text" name="team[members][][name]" id="member2_name"> <br />
+
+  <label for="team[members][][power]">Hero's Power</label>
+  <input type="text" name="team[members][][power]" id="member2_power"> <br />
+
+  <label for="team[members][][bio]">Hero's Biography</label>
+  <input type="text" name="team[members][][bio]" id="member2_bio"> <br />
+
+
+  <h2>Hero 3</h2>
+  <label for="team[members][][name]">Hero's Name</label>
+  <input type="text" name="team[members][][name]"id="member3_name"> <br />
+
+  <label for="team[members][][power]">Hero's Power</label>
+  <input type="text" name="team[members][][power]"id="member3_power"> <br />
+
+  <label for="team[members][][bio]">Hero's Biography</label>
+  <input type="text" name="team[members][][bio]" id="member3_bio"> <br />
+  <br>
+
+  <input type="submit" id="submit">
+</form>
+
+
+
+
+<!-- params {
+  team = {
+  name:
+  motto:
+  members: [
+
+  ]
+}
+} -->
