--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,9 @@
+<h1><%= "#{@team_name}" %></h1>
 
+<h2>Team Motto: <%= "#{@team_motto}" %></h2>
 
-
+<% params[:team][:heroes].each do |hero| %>
+    <h2>Hero Name:  <%= hero[:name]%></h2><br>
+    <h2>Hero Power: <%=hero[:power]%></h2><br>
+    <h2>Hero Biography: <%=hero[:biography]%></h2><br>
+  <% end %>
