--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Super Hero</title>
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
+    <form action="/team" method="post">
+      <label>Team Name: <input type="text" name="team[name]" id="1"></label><br>
+      <label>Team Motto: <input type="text" name="team[motto]" id="2"></label> <br>
 
+      <h2>Hero 1</h2>
+      <label>Hero's Name: <input type="text" name="team[heroes][][name]" id="member1_name"></label><br>
+      <label>Hero's Power: <input type="text" name="team[heroes][][power]" id="member1_power"></label><br>
+      <label>Hero's Biography: <input type="text" name="team[heroes][][biography]" id="member1_bio"></label><br>
+
+      <h2>Hero 2</h2>
+      <label>Hero's Name: <input type="text" name="team[heroes][][name]" id="member2_name"></label><br>
+      <label>Hero's Power: <input type="text" name="team[heroes][][power]" id="member2_power"></label><br>
+      <label>Hero's Biography: <input type="text" name="team[heroes][][biography]" id="member2_bio"></label><br>
+
+      <h2>Hero 3</h2>
+      <label>Hero's Name: <input type="text" name="team[heroes][][name]" id="member3_name"></label><br>
+      <label>Hero's Power: <input type="text" name="team[heroes][][power]" id="member3_power"></label><br>
+      <label>Hero's Biography: <input type="text" name="team[heroes][][biography]" id="member3_bio"></label><br>
+
+      <input type="submit" name="Submit" id="submit" value="Yay!">
+    </form>
+  </body>
+</html>
