--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,47 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Create a Team and Heroes!</title>
+  </head>
+  <body>
+    <form class="" action="/teams" method="post">
+      <h1>Create a Team of Heroes!</h1>
+      <label for="team_name">Team Name</label>
+      <input type="text" name="team[name]" id="team_name" value=""><br>
+      <label for="team_motto">Team Motto</label>
+      <input type="text" name="team[motto]" id="team_motto" value="">
+
+      <h2>Hero 1</h2>
+
+      <label for="member1_name">Hero's Name: </label>
+      <input type="text" name="team[members][][name]" id="member1_name" value="">
+      <label for="member1_power">Hero's Power: </label>
+      <input type="text" name="team[members][][power]" value="" id="member1_power">
+      <label for="member1_bio">Hero's Biography: </label>
+      <input type="text" name="team[members][][biography]" id="member1_bio" value="">
+
+      <h2>Hero 2</h2>
+
+      <label for="member2_name">Hero's Name: </label>
+      <input type="text" name="team[members][][name]" id="member2_name" value="">
+      <label for="member2_power">Hero's Power: </label>
+      <input type="text" name="team[members][][power]" value="" id="member2_power">
+      <label for="member2_bio">Hero's Biography: </label>
+      <input type="text" name="team[members][][biography]" id="member2_bio" value="">
+
+        <h2>Hero 3</h2>
+
+      <label for="member3_name">Hero's Name: </label>
+      <input type="text" name="team[members][][name]" id="member3_name" value="">
+      <label for="member3_power">Hero's Power: </label>
+      <input type="text" name="team[members][][power]" value="" id="member3_power">
+      <label for="member3_bio">Hero's Biography: </label>
+      <input type="text" name="team[members][][biography]" id="member3_bio" value=""><br><br>
+
+      <input type="submit" id="submit">
+    </form>
+
+  </body>
+</html>
