--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Your Superhero</title>
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
+    <form class="team" action="/team" method="post">
+    <input type="text" name="team[name]" value=""><br>
+    <input type="text" name="team[motto]" value="">
 
+    <h2>Hero 1</h2>
+    <input id="member1_name" type="text" name="team[members][][name]"><br>
+    <input id="member1_power" type="text" name="team[members][][power]"><br>
+    <input id="member1_bio" type="text" name="team[members][][bio]">
+
+    <h2>Hero 2</h2>
+    <input id="member2_name" type="text" name="team[members][][name]"><br>
+    <input id="member2_power" type="text" name="team[members][][power]"><br>
+    <input id="member2_bio" type="text" name="team[members][][bio]">
+
+    <h2>Hero 3</h2>
+    <input id="member3_name" type="text" name="team[members][][name]"><br>
+    <input id="member3_power" type="text" name="team[members][][power]"><br>
+    <input id="member3_bio" type="text" name="team[members][][bio]"><br>
+    <input type="submit" name="submit" value="submit">
+
+    </form>
+  </body>
+</html>
