--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Your Superhero Team</title>
+  </head>
+  <body>
+    <h1><%= @team.name %></h1>
+    <h3>Team Motto: <%= @team.motto %></h3>
 
-
-
+    <%@members.each do |member|%>
+    <div class="member">
+      <h2>Hero Name: <%= member.name %></h2>
+      <p>Hero Power: <%= member.power %></p>
+      <p>Hero Biography: <%= member.bio %></p>
+    </div>
+    <%end%>
+  </body>
+</html>
