--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,22 +7,33 @@
   <body>
     <h1>Create a Team and Heroes!</h1>
     <form class="team" action="/team" method="post">
+    <label for="team[name]">Team Name</label>
     <input type="text" name="team[name]" value=""><br>
+    <label for="team[motto]">Team Motto</label>
     <input type="text" name="team[motto]" value="">
 
     <h2>Hero 1</h2>
+    <label for="team[members][][name]">Hero Name </label>
     <input id="member1_name" type="text" name="team[members][][name]"><br>
+    <label for="team[members][][power]">Hero Power </label>
     <input id="member1_power" type="text" name="team[members][][power]"><br>
+    <label for="team[members][][bio]">Hero Bio  :</label>
     <input id="member1_bio" type="text" name="team[members][][bio]">
 
     <h2>Hero 2</h2>
+    <label for="team[members][][name]">Hero Name </label>
     <input id="member2_name" type="text" name="team[members][][name]"><br>
+    <label for="team[members][][power]">Hero Power </label>
     <input id="member2_power" type="text" name="team[members][][power]"><br>
+    <label for="team[members][][bio]">Hero Bio  :</label>
     <input id="member2_bio" type="text" name="team[members][][bio]">
 
     <h2>Hero 3</h2>
+    <label for="team[members][][name]">Hero Name </label>
     <input id="member3_name" type="text" name="team[members][][name]"><br>
+    <label for="team[members][][power]">Hero Power </label>
     <input id="member3_power" type="text" name="team[members][][power]"><br>
+    <label for="team[members][][bio]">Hero Bio  :</label>
     <input id="member3_bio" type="text" name="team[members][][bio]"><br>
     <input type="submit" name="submit" value="submit">
 
