--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <h1> Create a Team and Heroes!</h1>
+    <form action="/teams" method="post">
 
+      <p>Team Name: <input id="team[name]" type="text" name="team[team_name]"></p>
+      <p>Team Motto: <input id="team[motto]" type="text" name="team[team_motto]"></p>
+
+      <h2> Hero 1 </h2>
+        <p> Hero's Name: <input id="member1_name" type ="text" name="team[members][][name]"></p>
+        <p> Hero's Power: <input id="member1_power" type ="text" name="team[members][][power]"></p>
+        <p> Hero's Biography: <input id="member1_bio" type ="text" name="team[members][][biography]"></p>
+      <br>
+
+      <h2> Hero 2 </h2>
+        <p> Hero's Name: <input id="member2_name" type ="text" name="team[members][][name]"></p>
+        <p> Hero's Power: <input id="member2_power" type ="text" name="team[members][][power]"></p>
+        <p> Hero's Biography: <input id="member2_bio" type ="text" name="team[members][][biography]"></p>
+      <br>
+
+      <h2> Hero 3 </h2>
+        <p> Hero's Name: <input id="member3_name" type ="text" name="team[members][][name]"></p>
+        <p> Hero's Power: <input id="member3_power" type ="text" name="team[members][][power]"></p>
+        <p> Hero's Biography: <input id="member3_bio" type ="text" name="team[members][][biography]"></p>
+
+      <input type="submit" id="submit">
+    </form>
+  </body>
+</html>
+
+<!-- params = {
+  "team" => {
+    "name" => "Vic",
+    "motto" => "12",
+    "heroes" => [
+      {
+        "name" => "AP US History",
+        "power" => "History",
+        "biography" => blah
+      },
+      {
+        "name" => "AP US History",
+        "power" => "History",
+        "biography" => blah
+      },
+      {
+        "name" => "AP US History",
+        "power" => "History",
+        "biography" => blah
+      }
+    ]
+  }
+} -->
