--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>title</title>
+  </head>
+  <body>
+    <h1>Create a Team and Heroes!</h1>
+    <form method="POST" action="/teams">
+      <p>Team Name: <input type="text" name="team[name]"></p>
+      <p>Team Motto: <input type="text" name="team[motto]"></p>
+      <h2>Hero 1</h2>
+      <p>Hero's Name: <input type="text" name="hero[][name]"id="member1_name"></p>
+      <p>Hero's Power: <input type="text" name="hero[][power]"id="member1_power"></p>
+      <p>Hero's Biography: <input type="text" name="hero[][biography]"id="member1_bio"></p>
+      <h2>Hero 2</h2>
+      <p>Hero's Name: <input type="text" name="hero[][name]"id="member2_name"></p>
+      <p>Hero's Power: <input type="text" name="hero[][power]"id="member2_power"></p>
+      <p>Hero's Biography: <input type="text" name="hero[][biography]"id="member2_bio"></p>
+      <h2>Hero 3</h2>
+      <p>Hero's Name: <input type="text" name="hero[][name]"id="member3_name"></p>
+      <p>Hero's Power: <input type="text" name="hero[][power]"id="member3_power"></p>
+      <p>Hero's Biography: <input type="text" name="hero[][biography]"id="member3_bio"></p>
+      <input type="submit" value="submit" id="Submit">
+    </form>
+  </body>
+</html>
