--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,16 @@
+<h1><%= @team_info["team"]["name"] %></h1>
+  <h3>Team Motto: <%= @team_info["team"]["motto"] %></h3><br>
 
 
 
+    <h4>Hero Name: <%= @team_info ["hero"][0]["name"] %></h4>
+    <h4>Hero Power: <%= @team_info ["hero"][0]["power"] %></h4>
+    <h4>Hero Biography: <%= @team_info ["hero"][0]["biography"] %></h4>
+
+    <h4>Hero Name: <%= @team_info ["hero"][1]["name"] %></h4>
+    <h4>Hero Power: <%= @team_info ["hero"][1]["power"] %></h4>
+    <h4>Hero Biography: <%= @team_info ["hero"][1]["biography"] %></h4>
+
+    <h4>Hero Name: <%= @team_info ["hero"][2]["name"] %></h4>
+    <h4>Hero Power: <%= @team_info ["hero"][2]["power"] %></h4>
+    <h4>Hero Biography: <%= @team_info ["hero"][2]["biography"] %></h4>
